[package]
name = "yaffe-plex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaffe-plugin = { path = "../yaffe-rs/yaffe-plugin" }
reqwest = { version = "0.11", features = ["blocking"] }
#serde = { version = "^1", features = ["derive"] }
roxmltree = "0.14.1"

[lib]
crate-type = ["dylib"]